@@ -1,5 +1,5 @@
 Package: MTurkR
-Version: 0.6.5.4
+Version: 0.6.6
 Date: 2015-06-30
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
@@ -8,7 +8,7 @@ Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
              person("Sean", "Murphy", role = "ctb"),
              person("Jonathan", "Chang", role = "ctb"))
 Maintainer: Thomas J. Leeper <thosjleeper@gmail.com>
-Imports: RCurl, digest, XML, tcltk
+Imports: curl, digest, base64enc, XML, tcltk
 Description: Provides programmatic access to the Amazon Mechanical Turk (MTurk) Requester API.
 License: GPL-2
 URL: https://github.com/leeper/MTurkR
